RESOLVED FIXED 247764
With UI-side compositing enabled, some layout tests assert in WTF::isValidOptionSet(optionSet) encoding ScrollingStateNode::Property
https://bugs.webkit.org/show_bug.cgi?id=247764
Summary With UI-side compositing enabled, some layout tests assert in WTF::isValidOpt...
Simon Fraser (smfr)
Reported 2022-11-10 15:13:48 PST
A value is missing in the EnumTraits<>
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-10 15:14:39 PST
Simon Fraser (smfr)
Comment 2 2022-11-10 15:16:07 PST
EWS
Comment 3 2022-11-10 15:19:36 PST
Committed 256549@main (f32cd174bbce): <https://commits.webkit.org/256549@main> Reviewed commits have been landed. Closing PR #6372 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.