With UI-side compositing enabled, some layout tests assert in WTF::isValidOptionSet(optionSet) encoding ScrollingStateNode::Property https://bugs.webkit.org/show_bug.cgi?id=247764 rdar://102214098

Reviewed by Cameron McCormack.

Include the new `ScrollingStateNode::Property::KeyboardScrollData` value in
`EnumTraits<WebCore::ScrollingStateNode::Property>`.

* Source/WebKit/Shared/RemoteLayerTree/RemoteScrollingCoordinatorTransaction.cpp:

Canonical link: https://commits.webkit.org/256549@main